feat: add filter sintax
