# docs/swagger.json
@@ -104,6 +104,12 @@
                     },
                     {
                         "type": "string",
+                        "description": "Category filter",
+                        "name": "filter",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
                         "description": "A category name to filter by",
                         "name": "name",
                         "in": "query"
@@ -332,6 +338,12 @@
                         "default": 10,
                         "description": "Items per page",
                         "name": "per_page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Category filter",
+                        "name": "filter",
                         "in": "query"
                     },
                     {
